--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
   "author": "Yanira Monsalve <yaniramonsalvef@gmail.com>",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.3"
+    
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
