--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon -L server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.3"
-    
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
